# heat

./: .gitignore  README.md  __init__.py  infer.py  model.py  pyproject.toml  requirements.txt  setup.py
datasets/: data_utils.py
models/: corner_models.py  corner_to_edge.py  deformable_transformer.py  edge_models.py  mlp.py
models/ops/: setup.py  test.py
models/ops/modules/: ms_deform_attn.py
models/ops/src/cuda/: ms_deform_im2col_cuda.cuh
src/heat/: __init__.py  infer.py  model.py
src/heat/datasets/: data_utils.py
src/heat/models/: corner_models.py  corner_to_edge.py  deformable_transformer.py  edge_models.py  mlp.py  resnet.py
src/heat/models/ops/: build.py  make.sh  setup.py  test.py
src/heat/models/ops/functions/: __init__.py  ms_deform_attn_func.py
src/heat/models/ops/modules/: __init__.py  ms_deform_attn.py
src/heat/models/ops/src/: ms_deform_attn.h
src/heat/models/ops/src/cuda/: cuda_math_fix.h  ms_deform_attn_cuda.cu  ms_deform_im2col_cuda.cuh
src/heat/utils/: misc.py  nn_utils.py
tests/: test_api_validation.py  test_batch_infer.py  test_main.py
utils/: misc.py
