[project]
name = "heat"
version = "0.1.0"
description = "HEAT: Height Estimation and Attribute Transfer model"
authors = [
    {name = "fukuchidaisuke",email = "fukuchidaisuke@realglobe.jp"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "einops (>=0.8.2,<0.9.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "opencv-python (>=4.13.0.90,<5.0.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "torch (>=2.10.0,<3.0.0)",
    "torchvision (>=0.25.0,<0.26.0)",
]

[project.urls]
"torch-stable" = "https://download.pytorch.org/whl/torch_stable.html"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "torch>=2.10.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "heat"
version = "0.1.0"
description = "HEAT: Height Estimation and Attribute Transfer model"
authors = ["fukuchidaisuke <fukuchidaisuke@realglobe.jp>"]
packages = [
    {include = "heat", from = "src"},
]
build = "src/heat/models/ops/build.py"

[tool.poetry.scripts]
heat-infer = "heat.infer:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.14"
pytest = "^9.0.2"
scipy-stubs = "^1.17.0.2"
ninja = "^1.13.0"

# CUDA 13.0対応
[[tool.poetry.source]]
name = "pytorch_cu130"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch_cu130"}
torchvision = {source = "pytorch_cu130"}

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "SIM", "UP", "N", "TID"]
ignore = []

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["heat"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
