[project]
name = "heat"
version = "0.1.0"
description = "HEAT: Height Estimation and Attribute Transfer model"
authors = [
    { name = "fukuchidaisuke", email = "fukuchidaisuke@realglobe.jp" }
]
readme = "README.md"
requires-python = ">=3.14,<3.15,!=3.14.1"
dependencies = [
    "einops (>=0.8.2,<0.9.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "torch (>=2.12.0,<3.0.0)",
    "torchvision (>=0.27.0,<0.28.0)",
]

[build-system]
requires = [
    "setuptools>=70,<82",
    "wheel>=0.43",
    "torch>=2.12.0,<3.0.0",
    "torchvision>=0.27.0,<0.28.0",
    "ninja>=1.13.0",
]
build-backend = "setuptools.build_meta"

[tool.poetry]
packages = [
    { include = "heat", from = "src" },
]

[tool.poetry.group.dev.dependencies]
ninja = "^1.13.0"
pytest = "^9.0.3"
ruff = "^0.15.17"
scipy-stubs = "^1.17.1.5"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "SIM", "UP", "N", "TID"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/heat/models/ops/**" = ["E501"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["heat"]

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
markers = [
    "integration: tests that require the pretrained checkpoint and sample image",
]
